# PT-Reseeder

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml
.cargo/: config.toml
crates/core/: Cargo.toml
crates/core/src/: config.rs  error.rs  lib.rs  session.rs
crates/core/src/browser/: headless.rs  mod.rs
crates/core/src/crypto/: kdf.rs  mod.rs  vault.rs
crates/core/src/db/: mod.rs  models.rs  repo.rs  writer.rs
crates/core/src/downloader/: mod.rs  models.rs  qbittorrent.rs  traits.rs  transmission.rs
crates/core/src/engine/: adder.rs  dry_run.rs  filter.rs  jackett.rs  matcher.rs  mod.rs  pack.rs  pipeline.rs  scanner.rs  stats.rs
crates/core/src/repost/: adapter.rs  extractor.rs  mod.rs  models.rs  review.rs  submitter.rs
crates/core/src/scheduler/: cron.rs  executor.rs  folder.rs  mod.rs  task.rs  watcher.rs
crates/core/src/site/: mod.rs  models.rs  probe.rs  rate_limiter.rs  registry.rs  traits.rs
crates/core/src/site/adapters/: gazelle.rs  mod.rs  mteam.rs  nexusphp.rs  unit3d.rs  zhuque.rs
crates/core/src/site/definitions/: 1ptba.toml  2xfree.toml  aither.toml  audiences.toml  beitai.toml  blutopia.toml  btschool.toml  chdbits.toml  dicmusic.toml  dmhy.toml  freefarm.toml  greatposterwall.toml  haidan.toml  hares.toml  hdarea.toml  hdatmos.toml  hdcity.toml  hdfans.toml  hdhome.toml  hdpt.toml  hdsky.toml  hdtime.toml  hhanclub.toml  icc2022.toml  keepfrds.toml  kufei.toml  leaguhd.toml  leaves.toml  lemonhd.toml  mod.rs  mteam.toml  okpt.toml  orpheus.toml  oshen.toml  ourbits.toml  piggo.toml  ptcafe.toml  pterclub.toml  pthome.toml  ptlsp.toml  (+9 more)
crates/core/src/stats/: mod.rs  reseed.rs  user_info.rs
crates/core/src/torrent/: bencode.rs  mod.rs  models.rs  parser.rs
crates/core/tests/: repost_pipeline.rs  reseed_pipeline.rs  test_ptcafe_probe.rs
crates/desktop/: Cargo.toml  tauri.conf.json
crates/desktop/src/: main.rs  webview.rs
crates/frontend/: Cargo.toml  index.html
crates/frontend/src/: app.rs  lib.rs  server_fns.rs  utils.rs  ws.rs
crates/frontend/src/components/: confirm_modal.rs  empty_state.rs  mod.rs  nav.rs  theme.rs  toast.rs
crates/frontend/src/pages/: dashboard.rs  downloaders.rs  folders.rs  login.rs  logs.rs  mod.rs  repost.rs  settings.rs  site_detail.rs  sites.rs  tasks.rs
crates/server/: Cargo.toml
crates/server/src/: app.rs  auth.rs  lib.rs  log.rs  main.rs  state.rs
crates/server/src/api/: auth.rs  downloaders.rs  folders.rs  health.rs  mod.rs  repost.rs  sites.rs  stats.rs  tasks.rs
crates/server/src/ws/: events.rs  mod.rs
migrations/: 001_initial_schema.sql  002_reseed_history.sql  003_task_scheduler.sql  004_fetch_seeding_size_setting.sql  005_task_reseed_sources.sql  006_drop_downloader_pairs.sql
style/: main.scss
