[workspace]
resolver = "2"
members = ["crates/core", "crates/frontend", "crates/server", "crates/desktop"]

[workspace.dependencies]
leptos = "0.8"
leptos_router = "0.8"
leptos_meta = "0.8"
leptos_axum = "0.8"
axum = "0.8"
axum-extra = { version = "0.10", features = ["cookie"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }

[[workspace.metadata.leptos]]
name = "pt-reseeder"
bin-package = "pt-reseeder-server"
lib-package = "pt-reseeder-frontend"
lib-features = ["hydrate"]
site-root = "target/site"
site-pkg-dir = "pkg"
site-addr = "127.0.0.1:3000"
