[package]
name = "pt-reseeder-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
chrono = { workspace = true }
sqlx = { workspace = true }
argon2 = "0.5"
aes-gcm = "0.10"
rand = "0.8"
sha2 = "0.10"
sha1 = "0.10"
zeroize = { version = "1.8", features = ["zeroize_derive"] }
governor = "0.7"
serde_bencode = "0.2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "cookies", "multipart"] }
scraper = "0.21"
toml_lib = { package = "toml", version = "0.8" }
futures = "0.3"
regex-lite = "0.1"
urlencoding = "2"
tokio-cron-scheduler = "0.13"
croner = "2.2"
notify = "7"
uuid = "1"
chromiumoxide = { version = "0.7", features = ["tokio-runtime"], optional = true }

[features]
headless-browser = ["chromiumoxide"]

[dev-dependencies]
tempfile = "3"
boa_engine = "0.21"
