[package]
name = "pt-reseeder-desktop"
version = "0.1.0"
edition = "2021"

[dependencies]
pt-reseeder-server = { path = "../server" }
pt-reseeder-core = { path = "../core" }
tauri = { version = "2", features = [] }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
url = "2"

[build-dependencies]
tauri-build = { version = "2", features = [] }
