[package]
name = "pt-reseeder-frontend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { workspace = true }
leptos_router = { workspace = true }
leptos_meta = { workspace = true }
wasm-bindgen = "=0.2.100"
console_error_panic_hook = "0.1"
serde = { workspace = true }

[features]
hydrate = ["leptos/hydrate"]
ssr = ["leptos/ssr", "leptos_router/ssr", "leptos_meta/ssr"]
