[package]
name = "pt-reseeder-server"
version = "0.1.0"
edition = "2021"

[lib]
name = "pt_reseeder_server"

[[bin]]
name = "pt-reseeder-server"
path = "src/main.rs"

[dependencies]
pt-reseeder-frontend = { path = "../frontend", features = ["ssr"] }
pt-reseeder-core = { path = "../core" }
leptos = { workspace = true, features = ["ssr"] }
leptos_axum = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
sqlx = { workspace = true }
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
time = "0.3"

[features]
headless-browser = ["pt-reseeder-core/headless-browser"]
